<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userInformation"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/amarante"
        android:text="@string/user_information"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/amarante"
        android:text="@string/username"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/amarante"
        android:text="@string/userview"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="53dp"
        android:layout_height="42dp"
        android:contentDescription="@string/todo"
        android:rotation="15"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:srcCompat="@drawable/musicsign2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:rotation="-15"
        app:layout_constraintBottom_toTopOf="@+id/userEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        app:srcCompat="@drawable/musicsign1" />
</androidx.constraintlayout.widget.ConstraintLayout>