<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/TopBackground"
        android:layout_width="match_parent"
        android:layout_height="229dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ProfilePicture"
        android:layout_width="187dp"
        android:layout_height="162dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/insertpicture"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TopBackground"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/filepath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/Email"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SongTitle" />

    <TextView
        android:id="@+id/songCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/phone"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filepath" />

    <TextView
        android:id="@+id/SongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopBackground" />

    <ImageView
        android:id="@+id/music_imageView3"
        android:layout_width="49dp"
        android:layout_height="43dp"
        android:layout_marginTop="204dp"
        android:src="@drawable/musicsign2"
        app:layout_constraintTop_toTopOf="@+id/TopBackground"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="249dp"
        android:layout_height="198dp"
        android:layout_marginStart="192dp"
        app:layout_constraintStart_toStartOf="@+id/TopBackground"
        app:layout_constraintTop_toTopOf="@+id/TopBackground"
        app:srcCompat="@drawable/tonearm" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="41dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_perm_identity_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/SongTitle"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="41dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_mail_outline_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/filepath"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="41dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_phone_android_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/songCover"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="608dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_main" />

    <TextView
        android:id="@+id/UserNameView"
        android:layout_width="221dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="92dp"
        android:gravity="center"
        android:text="UserView"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/filepath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SongTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/emailView"
        android:layout_width="335dp"
        android:layout_height="52dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="EmailView"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/songCover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filepath"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/phoneView"
        android:layout_width="221dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="phoneView"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:layout_width="55dp"
        android:layout_height="47dp"
        android:layout_marginStart="340dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:drawableBottom="@drawable/ic_edit_black_24dp"
        android:text="Update"
        android:onClick="editProfile"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ProfilePicture"
        app:layout_constraintStart_toStartOf="@+id/TopBackground" />


</androidx.constraintlayout.widget.ConstraintLayout>